fix text-align style

--- a/app/styles/content.css
+++ b/app/styles/content.css
@@ -37,6 +37,7 @@
   color: #fff;
 }
 #youdao-popup-content {
+  text-align: left;
   padding: 10px;
   font-size: 14px;
   line-height: 16px;
